--- a/Project.toml
+++ b/Project.toml
@@ -9,11 +9,13 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Extents = "411431e0-e8b7-467b-b5e0-f676ba4f2910"
 FastGeoProjections = "981663e8-0c94-46dd-b2cf-efc8480900ec"
 GeoFormatTypes = "68eda718-8dee-11e9-39e7-89f7f65f511f"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Scanf = "6ef1bc8b-493b-44e1-8d40-549aa65c4b41"
 
 [compat]
 julia = "1"
+Extents = "0.1.2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
